# sequoia

./: .Makefile  .gitlab-ci.yml  Dockerfile  README.md  clippy.toml
.cargo/: config.toml
.ci/: snippet_for_cross_compilation_config.toml
autocrypt/: Cargo.toml
autocrypt/src/: lib.rs
buffered-reader/: Cargo.toml
buffered-reader/src/: generic.rs  macros.rs
doc/: msrv.md  release-checklist.md
ipc/: Cargo.toml
ipc/examples/: gpg-agent-decrypt.rs  gpg-agent-sign.rs
ipc/src/: gnupg.rs  keygrip.rs  lib.rs  macros.rs  sexp.rs
ipc/src/assuan/: grammar.lalrpop  mod.rs  socket.rs
ipc/tests/: gpg-agent.rs
ipc/tests/data/keys/: alpha.pgp  zulu.pgp
net/: Cargo.toml
net/src/: dane.rs  email.rs  lib.rs  macros.rs  pks.rs  wkd.rs
net/tests/: hkp.rs
openpgp/: Cargo.toml  NEWS  README.md  build.rs
openpgp/src/: armor.rs  cert.rs  fingerprint.rs  lib.rs  macros.rs  parse.rs  policy.rs  serialize.rs
sq/: Cargo.toml  LICENSE.txt  README.md  build.rs  sq-subplot.md  sq-usage.md  sq.subplot
sq/man-sq/: sq-armor.1  sq-autocrypt-decode.1  sq-autocrypt-encode-sender.1  sq-autocrypt.1  sq-certify.1  sq-dearmor.1  sq-decrypt.1  sq-encrypt.1  sq-inspect.1  sq-key-adopt.1  sq-key-attest-certifications.1  sq-key-extract-cert.1  sq-key-generate.1  sq-key-password.1  sq-key-userid-add.1  sq-key-userid-strip.1  sq-key.1  (+27 more)
sq/man-sq-autocrypt/: sq-armor.1  sq-certify.1  sq-dearmor.1  sq-decrypt.1  sq-encrypt.1  sq-inspect.1  sq-key-adopt.1  sq-key-attest-certifications.1  sq-key-extract-cert.1  sq-key-generate.1  sq-key-password.1  sq-key-userid-add.1  sq-key-userid-strip.1  sq-key-userid.1  sq-key.1  sq-keyring-filter.1  sq-keyring-join.1  sq-keyring-list.1  sq-keyring-merge.1  sq-keyring-split.1  sq-keyring.1  sq-keyserver-get.1  sq-keyserver-send.1  sq-keyserver.1  sq-packet-decrypt.1  sq-packet-dump.1  sq-packet-join.1  sq-packet-split.1  sq-packet.1  sq-revoke-certificate.1  sq-revoke-subkey.1  sq-revoke-userid.1  sq-revoke.1  sq-sign.1  sq-verify.1  sq-wkd-direct-url.1  sq-wkd-generate.1  sq-wkd-get.1  sq-wkd-url.1  sq-wkd.1  (+1 more)
(+86 files in other folders)
